# boost_simple_client_server

./: README.md
client/: CMakeLists.txt  client_logic.cpp  client_logic.h  iconnection_handler.h  itest_client.h  main.cpp  talk_to_server.cpp  talk_to_server.h  test_client.cpp  test_client.h
protocol/: imessage_creator.h  imessage_parser.h  protocol.h  protocol.h~  test_message_creator.cpp  test_message_creator.h  test_message_parser.cpp  test_message_parser.h
random/: random.cpp  random.h  sha256.cpp~
server/: CMakeLists.txt  iconnection_handler.h  itest_server.h  main.cpp  server_logic.cpp  server_logic.h  talk_to_client.cpp  talk_to_client.h  test_server.cpp  test_server.h
sha256/: serialize.cpp~  serialize.h~  sha256.cpp  sha256.h
timer/: timer.h
